# httpx-logging-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
httpx_logging_client/: __init__.py  client.py  transport.py
httpx_structlog/: client.py  transport.py
